minor text edits

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
     And this is just the beginning. With Gen X Cars selling its most affordable car yet, Gen X Cars continues to make products accessible and affordable to more and more people, ultimately accelerating the advent of clean transport and clean energy production. Electric cars, batteries, and renewable energy generation and storage already exist independently, but when combined, they become even more powerful – that’s the future we want.</p>
     <br>
 
-    <h3 id="staff">Staff</h3>
+    <h3 id="staff">Our Family</h3>
     <div class="row">
         <div class="column">
           <div class="card">
