minor text edit to nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <li><a class="nav" href="#new">Just In</a></li>
         <li><a class="nav" href="#search">Search</a></li>
         <li><a class="nav" href="#about">Who We Are</a></li>
-        <li><a class="nav" href="#staff">Staff</a></li>
+        <li><a class="nav" href="#staff">Our Family</a></li>
         <li><a class="nav" href="#contact">Contact</a></li>
     </ul>
     <div id="cover">
